[gd_scene load_steps=4 format=3 uid="uid://d251fx4ourf7o"]

[ext_resource type="Script" path="res://Scripts/creature.gd" id="1_at7bq"]
[ext_resource type="Texture2D" uid="uid://dg3yqld3gdehd" path="res://Assets/tilesheet_complete.png" id="1_fo3l3"]

[sub_resource type="CircleShape2D" id="CircleShape2D_3j0mx"]
radius = 12.0416

[node name="Creature" type="Area2D"]
script = ExtResource("1_at7bq")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_fo3l3")
hframes = 22
vframes = 12
frame = 36

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_3j0mx")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.05
autostart = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
